OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.2.1 (2018-0?-??)
------------------
- ALL: voeg een berichttype "opmerking" toe zodat de melding over het
  overschrijven van een bestaande factuur er minder ernstig uitziet.

5.2.0 (2018-02-26)
------------------
- PS: Log folder is in 1.7 /app/logs/ en niet meer /log/.
- ALL: Als een factuur als concept wordt ogeslagen voeg dan een verwijzing naar
  waar deze te vinden toe aan de waarschuwingstekst.
- ALL: Als er een bedrag mist wordt er nu een waarschuwing en, indien mogelijk,
  een correctieregel toegvoegd. Dit kan gebeuren als bv een betaalmodule die
  (nog) niet door ons wordt ondersteund een betaalfee toevoegt.
- ALL: een 0-factuur kon bij een aantal shops leiden tot een onterechte
  waarschuwing en dus een concept-factuur. Deze situatie wordt nu beter
  aangepakt waardoor de waarschuwing niet meer gegeven zal worden.
- ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
  boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail. Ook de
  waarschuwing bij geforceerd verzenden is aangepast.
- ALL: Het te gebruiken factuursjabloon wordt nu pas bepaald na het invoice_created
  event zodat het eventueel corrigeren van de betaalstatus in dat event doorwerkt
  in de factuursjabloon keuze.
- ALL: meerdere spelfouten uit de NL en EN vertalingen gehaald.
- ALL: fouten en waarschuwingen van een ander API request (vooralsnog opvragen
  btw tarieven en verwijderen oude entry) worden toegvoegd aan het
  overall resultaat van de hoofdbewerking (add invoice).
- ALL: toegang op veldniveau tot acumulus entry records is nu beter geregeld
  door het wrappen van een db record/object in een nieuwe class AcumulusEntry.
- ALL: Rename AcumulusEntryModel naar AcumulusEntryManager.
- ALL: A number of API calls have been added: