@@ -21,6 +21,8 @@ WC3 = WooCommerce 3 (WordPress)
 ------------------
 - ALL: voeg een berichttype "opmerking" toe zodat de melding over het
   overschrijven van een bestaande factuur er minder ernstig uitziet.
+- WC: Change WordPress form rendering to accommodate the new Acumulus invoice
+  overview form.
 
 5.2.0 (2018-02-26)
 ------------------
